# papp

./: .gitignore  CMakeLists.txt  Makefile  latency.c  naive_stride.c  occupancy.c  papp.c  plot.py
algorithms/: occupancy.md
include/: address.h  cache.h  eviction_set.h  occupancy_profile.h  prefetcher.h  utility.h
results/: next_line.csv  timing.csv
results/occupancy/: no_warmup_O1_CPU4_S3.csv  time.txt
results/strides/: 1.csv  10.csv  12.csv  16.csv  2.csv  24.csv  3.csv  32.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
src/: eviction_set.c  occupancy_profile.c
